adding feedback popup and position sticky to map

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                 <div class="contacts__info">
                   <div class="contacts__info_item warehouse">
                     <div class="contacts__info_ico">
-                      <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <rect width="50" height="50" rx="22" fill="#F7F7F8"/>
-                        <path d="M19.0001 21.44C18.9801 26.54 24.1701 30.62 24.3901 30.79C24.5701 30.93 24.7901 31 25.0001 31C25.2101 31 25.4301 30.93 25.6101 30.79C25.8301 30.62 31.0201 26.54 31.0001 21.44C31.0001 17.89 28.3101 15 25.0001 15C21.6901 15 19.0001 17.89 19.0001 21.44ZM29.0001 21.44C29.0101 24.63 26.2601 27.52 25.0001 28.68C23.7401 27.53 20.9901 24.64 21.0001 21.44C21.0001 18.99 22.7901 17 25.0001 17C27.2101 17 29.0001 18.99 29.0001 21.44Z" fill="#2C3336"/>
-                        <path d="M25 19C24.4696 19 23.9609 19.2107 23.5858 19.5858C23.2107 19.9609 23 20.4696 23 21C23 21.5304 23.2107 22.0391 23.5858 22.4142C23.9609 22.7893 24.4696 23 25 23C25.5304 23 26.0391 22.7893 26.4142 22.4142C26.7893 22.0391 27 21.5304 27 21C27 20.4696 26.7893 19.9609 26.4142 19.5858C26.0391 19.2107 25.5304 19 25 19Z" fill="#2C3336"/>
-                        <path d="M31.02 27.73C30.62 28.37 30.18 28.96 29.75 29.49C31.88 29.97 33 30.68 33 31C33 31.51 30.25 33 25 33C19.75 33 17 31.51 17 31C17 30.68 18.12 29.97 20.25 29.49C19.82 28.96 19.39 28.37 18.98 27.73C16.66 28.37 15 29.44 15 31C15 33.75 20.18 35 25 35C29.82 35 35 33.75 35 31C35 29.44 33.33 28.37 31.02 27.73Z" fill="#2C3336"/>
+                      <svg width="52" height="52" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect width="52" height="52" rx="16" fill="#F7F7F8"/>
+                        <path d="M20.0001 22.44C19.9801 27.54 25.1701 31.62 25.3901 31.79C25.5701 31.93 25.7901 32 26.0001 32C26.2101 32 26.4301 31.93 26.6101 31.79C26.8301 31.62 32.0201 27.54 32.0001 22.44C32.0001 18.89 29.3101 16 26.0001 16C22.6901 16 20.0001 18.89 20.0001 22.44ZM30.0001 22.44C30.0101 25.63 27.2601 28.52 26.0001 29.68C24.7401 28.53 21.9901 25.64 22.0001 22.44C22.0001 19.99 23.7901 18 26.0001 18C28.2101 18 30.0001 19.99 30.0001 22.44Z" fill="#2C3336"/>
+                        <path d="M26 20C25.4696 20 24.9609 20.2107 24.5858 20.5858C24.2107 20.9609 24 21.4696 24 22C24 22.5304 24.2107 23.0391 24.5858 23.4142C24.9609 23.7893 25.4696 24 26 24C26.5304 24 27.0391 23.7893 27.4142 23.4142C27.7893 23.0391 28 22.5304 28 22C28 21.4696 27.7893 20.9609 27.4142 20.5858C27.0391 20.2107 26.5304 20 26 20Z" fill="#2C3336"/>
+                        <path d="M32.02 28.7305C31.62 29.3705 31.18 29.9605 30.75 30.4905C32.88 30.9705 34 31.6805 34 32.0005C34 32.5105 31.25 34.0005 26 34.0005C20.75 34.0005 18 32.5105 18 32.0005C18 31.6805 19.12 30.9705 21.25 30.4905C20.82 29.9605 20.39 29.3705 19.98 28.7305C17.66 29.3705 16 30.4405 16 32.0005C16 34.7505 21.18 36.0005 26 36.0005C30.82 36.0005 36 34.7505 36 32.0005C36 30.4405 34.33 29.3705 32.02 28.7305Z" fill="#2C3336"/>
                       </svg>
                     </div>
                     <div class="contacts__info_content">
@@ -66,18 +66,18 @@
                         Офис:
                       </span>
                       <div class="contacts__info_description">
-                        <p>ул. Электрозаводская, д. 2 к. 1, офис 101</p>
+                        <p>ул. Электрозаводская, д. 2 к. 1, оф 101</p>
                         <p class="working-hours">Пн-Пт 08:00 - 18:00</p>
                       </div>
                     </div>
                   </div>
                   <div class="contacts__info_item warehouse">
                     <div class="contacts__info_ico">
-                      <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <rect width="50" height="50" rx="22" fill="#F7F7F8"/>
-                        <path d="M19.0001 21.44C18.9801 26.54 24.1701 30.62 24.3901 30.79C24.5701 30.93 24.7901 31 25.0001 31C25.2101 31 25.4301 30.93 25.6101 30.79C25.8301 30.62 31.0201 26.54 31.0001 21.44C31.0001 17.89 28.3101 15 25.0001 15C21.6901 15 19.0001 17.89 19.0001 21.44ZM29.0001 21.44C29.0101 24.63 26.2601 27.52 25.0001 28.68C23.7401 27.53 20.9901 24.64 21.0001 21.44C21.0001 18.99 22.7901 17 25.0001 17C27.2101 17 29.0001 18.99 29.0001 21.44Z" fill="#2C3336"/>
-                        <path d="M25 19C24.4696 19 23.9609 19.2107 23.5858 19.5858C23.2107 19.9609 23 20.4696 23 21C23 21.5304 23.2107 22.0391 23.5858 22.4142C23.9609 22.7893 24.4696 23 25 23C25.5304 23 26.0391 22.7893 26.4142 22.4142C26.7893 22.0391 27 21.5304 27 21C27 20.4696 26.7893 19.9609 26.4142 19.5858C26.0391 19.2107 25.5304 19 25 19Z" fill="#2C3336"/>
-                        <path d="M31.02 27.73C30.62 28.37 30.18 28.96 29.75 29.49C31.88 29.97 33 30.68 33 31C33 31.51 30.25 33 25 33C19.75 33 17 31.51 17 31C17 30.68 18.12 29.97 20.25 29.49C19.82 28.96 19.39 28.37 18.98 27.73C16.66 28.37 15 29.44 15 31C15 33.75 20.18 35 25 35C29.82 35 35 33.75 35 31C35 29.44 33.33 28.37 31.02 27.73Z" fill="#2C3336"/>
+                      <svg width="52" height="52" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect width="52" height="52" rx="16" fill="#F7F7F8"/>
+                        <path d="M20.0001 22.44C19.9801 27.54 25.1701 31.62 25.3901 31.79C25.5701 31.93 25.7901 32 26.0001 32C26.2101 32 26.4301 31.93 26.6101 31.79C26.8301 31.62 32.0201 27.54 32.0001 22.44C32.0001 18.89 29.3101 16 26.0001 16C22.6901 16 20.0001 18.89 20.0001 22.44ZM30.0001 22.44C30.0101 25.63 27.2601 28.52 26.0001 29.68C24.7401 28.53 21.9901 25.64 22.0001 22.44C22.0001 19.99 23.7901 18 26.0001 18C28.2101 18 30.0001 19.99 30.0001 22.44Z" fill="#2C3336"/>
+                        <path d="M26 20C25.4696 20 24.9609 20.2107 24.5858 20.5858C24.2107 20.9609 24 21.4696 24 22C24 22.5304 24.2107 23.0391 24.5858 23.4142C24.9609 23.7893 25.4696 24 26 24C26.5304 24 27.0391 23.7893 27.4142 23.4142C27.7893 23.0391 28 22.5304 28 22C28 21.4696 27.7893 20.9609 27.4142 20.5858C27.0391 20.2107 26.5304 20 26 20Z" fill="#2C3336"/>
+                        <path d="M32.02 28.7305C31.62 29.3705 31.18 29.9605 30.75 30.4905C32.88 30.9705 34 31.6805 34 32.0005C34 32.5105 31.25 34.0005 26 34.0005C20.75 34.0005 18 32.5105 18 32.0005C18 31.6805 19.12 30.9705 21.25 30.4905C20.82 29.9605 20.39 29.3705 19.98 28.7305C17.66 29.3705 16 30.4405 16 32.0005C16 34.7505 21.18 36.0005 26 36.0005C30.82 36.0005 36 34.7505 36 32.0005C36 30.4405 34.33 29.3705 32.02 28.7305Z" fill="#2C3336"/>
                       </svg>
                     </div>
                     <div class="contacts__info_content">
@@ -92,9 +92,9 @@
                   </div>
                   <div class="contacts__info_item">
                     <div class="contacts__info_ico">
-                      <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <rect width="50" height="50" rx="22" fill="#F7F7F8"/>
-                        <path d="M31.0708 35H31.4208C31.8908 34.98 32.3208 34.74 32.5908 34.36L34.7308 31.27C34.9608 30.94 35.0508 30.53 34.9708 30.13C34.8908 29.73 34.6608 29.39 34.3308 29.16L29.6908 26.07C29.4456 25.9052 29.1563 25.8181 28.8608 25.82C28.4508 25.82 28.0508 25.98 27.7608 26.3L26.2908 27.89C25.6008 27.46 24.6808 26.82 23.9308 26.07C23.2108 25.35 22.5608 24.43 22.1108 23.71L23.7008 22.24C24.2408 21.74 24.3408 20.92 23.9308 20.31L20.8408 15.67C20.6208 15.34 20.2708 15.1 19.8708 15.03C19.6761 14.9908 19.4753 14.9918 19.281 15.0331C19.0867 15.0744 18.9028 15.155 18.7408 15.27L15.6508 17.41C15.2608 17.68 15.0308 18.11 15.0108 18.58C14.9808 19.27 14.8508 25.48 19.6908 30.32C24.0408 34.67 29.5008 35.01 31.0708 35.01V35ZM19.8808 23.05C19.7208 23.2 19.6708 23.44 19.7708 23.64C19.8208 23.73 20.9208 25.88 22.5108 27.48C24.1108 29.08 26.2608 30.18 26.3508 30.23C26.5508 30.33 26.7908 30.29 26.9408 30.12L28.9308 27.97L32.7908 30.54L31.0908 33C29.9308 33 24.9608 32.76 21.1008 28.9C17.2408 25.04 17.0008 20.06 17.0008 18.91L19.4608 17.21L22.0308 21.07L19.8808 23.06V23.05Z" fill="#2C3336"/>
+                      <svg width="52" height="52" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect width="52" height="52" rx="16" fill="#F7F7F8"/>
+                        <path d="M32.0708 35.9997H32.4208C32.8908 35.9797 33.3208 35.7397 33.5908 35.3597L35.7308 32.2697C35.9608 31.9397 36.0508 31.5297 35.9708 31.1297C35.8908 30.7297 35.6608 30.3897 35.3308 30.1597L30.6908 27.0697C30.4456 26.9048 30.1563 26.8177 29.8608 26.8197C29.4508 26.8197 29.0508 26.9797 28.7608 27.2997L27.2908 28.8897C26.6008 28.4597 25.6808 27.8197 24.9308 27.0697C24.2108 26.3497 23.5608 25.4297 23.1108 24.7097L24.7008 23.2397C25.2408 22.7397 25.3408 21.9197 24.9308 21.3097L21.8408 16.6697C21.6208 16.3397 21.2708 16.0997 20.8708 16.0297C20.6761 15.9904 20.4753 15.9914 20.281 16.0327C20.0867 16.074 19.9028 16.1546 19.7408 16.2697L16.6508 18.4097C16.2608 18.6797 16.0308 19.1097 16.0108 19.5797C15.9808 20.2697 15.8508 26.4797 20.6908 31.3197C25.0408 35.6697 30.5008 36.0097 32.0708 36.0097V35.9997ZM20.8808 24.0497C20.7208 24.1997 20.6708 24.4397 20.7708 24.6397C20.8208 24.7297 21.9208 26.8797 23.5108 28.4797C25.1108 30.0797 27.2608 31.1797 27.3508 31.2297C27.5508 31.3297 27.7908 31.2897 27.9408 31.1197L29.9308 28.9697L33.7908 31.5397L32.0908 33.9997C30.9308 33.9997 25.9608 33.7597 22.1008 29.8997C18.2408 26.0397 18.0008 21.0597 18.0008 19.9097L20.4608 18.2097L23.0308 22.0697L20.8808 24.0597V24.0497Z" fill="#2C3336"/>
                       </svg>
                     </div>
                     <div class="contacts__info_content">
@@ -108,9 +108,9 @@
                   </div>
                   <div class="contacts__info_item">
                     <div class="contacts__info_ico">
-                      <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <rect width="50" height="50" rx="22" fill="#F7F7F8"/>
-                        <path d="M33 17H17C15.9 17 15 17.9 15 19V31C15 32.1 15.9 33 17 33H33C34.1 33 35 32.1 35 31V19C35 17.9 34.1 17 33 17ZM24.39 27.79C24.57 27.93 24.79 28 25 28C25.21 28 25.43 27.93 25.61 27.79L27.16 26.58L31.58 31H18.41L22.83 26.58L24.38 27.79H24.39ZM33 19V19.51L25 25.73L17 19.51V19H33ZM33 22.04V29.58L28.76 25.34L33 22.04ZM21.24 25.34L17 29.58V22.04L21.24 25.34Z" fill="#2C3336"/>
+                      <svg width="52" height="52" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect width="52" height="52" rx="16" fill="#F7F7F8"/>
+                        <path d="M34 18H18C16.9 18 16 18.9 16 20V32C16 33.1 16.9 34 18 34H34C35.1 34 36 33.1 36 32V20C36 18.9 35.1 18 34 18ZM25.39 28.79C25.57 28.93 25.79 29 26 29C26.21 29 26.43 28.93 26.61 28.79L28.16 27.58L32.58 32H19.41L23.83 27.58L25.38 28.79H25.39ZM34 20V20.51L26 26.73L18 20.51V20H34ZM34 23.04V30.58L29.76 26.34L34 23.04ZM22.24 26.34L18 30.58V23.04L22.24 26.34Z" fill="#2C3336"/>
                       </svg>
                     </div>
                     <div class="contacts__info_content">
@@ -132,9 +132,9 @@
                       Срок действия счета составляет 3 рабочих дня, в случае необходимости продления периода оплаты счета.
                     </div>
                   </div>
-                  <form action="" class="contacts__feedback_form">
-                    <input type="tel" data-maska="+7 (###)-###-##-##" placeholder="Ваш телефон">
-                    <button>Оставить заявку</button>
+                  <form action="" class="contacts__feedback_form" id="feedback-form">
+                    <input type="tel" data-maska="+7 (###)-###-##-##" placeholder="Ваш телефон" required>
+                    <button type="submit">Оставить заявку</button>
                   </form>
                   <div class="contacts__feedback_social">
                     <a href="" class="contacts__feedback_item">
@@ -181,6 +181,22 @@
       </main>
 
   {{> _footer}}
+
+  <!-- Попап благодарности -->
+  <div class="popup-overlay active" id="thank-you-popup">
+    <div class="popup">
+      <span class="popup__close" id="popup-close">
+        <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M10.3846 9L18 16.6154L16.6154 18L9 10.3846L1.38462 18L0 16.6154L7.61538 9L0 1.38462L1.38462 0L9 7.61538L16.6154 0L18 1.38462L10.3846 9Z" fill="#70828A"/>
+        </svg>          
+      </span>
+      <div class="popup__content">
+        <div class="popup__title">Спасибо!</div>
+        <p class="popup__text">Ваша заявка принята. Наш менеджер свяжется с вами в указанное время.</p>
+        <button class="popup__button" id="popup-ok">Хорошо</button>
+      </div>
+    </div>
+  </div>
 
 <!--    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>-->
     <script type="module" src="/main.js"></script>
