adding hover to forms buttons

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
   {{> _footer}}
 
   <!-- Попап благодарности -->
-  <div class="popup-overlay active" id="thank-you-popup">
+  <div class="popup-overlay" id="thank-you-popup">
     <div class="popup">
       <span class="popup__close" id="popup-close">
         <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
